# lollipop_calibration

./: CMakeLists.txt  README.md
include/: background_filter.hpp  blob_extractor.hpp  ceres_manager.hpp  connected.hpp  error_models.hpp  filter.hpp  generic_sensor.hpp  linearTF_solver.hpp  morph_operator.hpp  openni.hpp  sphere_fitter.hpp
include/impl/: background_filter.cpp  blob_extractor.cpp  filter.cpp  generic_sensor.cpp  linearTF_solver.cpp  morph_operator.cpp  onepass_blob_extractor.cpp  range_sensor.cpp  sphere_fitter.cpp
matlab/: cost_test_convex.m  gen_data.m
src/: CMakeLists.txt  background_filter.cpp  blob_extractor.cpp  openni_ss.cpp  show_pcd.cpp  sln2dat.cpp
tests/: CMakeLists.txt  error_analysis.cpp  proc_gt.cpp  proc_gt_yaml.cpp  show_result.cpp  show_result_clr.cpp  test_2ndpass.cpp  test_cost.cpp  test_detect_ball.cpp  test_emit_yaml.cpp  test_filter.cpp  test_load_yaml.cpp  test_pipeline.cpp  test_raycost.cpp  test_regress_gt.cpp  test_sf.cpp  test_single_cam.cpp  test_tfsolver.cpp
